--- a/frontend/src/components/dashboard/modals/user-setting-modal/userSettingModal.css
+++ b/frontend/src/components/dashboard/modals/user-setting-modal/userSettingModal.css
@@ -1,5 +1,6 @@
-.dialogContent {
+.popoverContent {
   max-width: 280px;
+  padding: 0;
 }
 
 .header {
@@ -76,13 +77,16 @@
 
 .themeIcons {
   display: flex;
-  gap: 4px;
+  gap: 10px;
   font-size: 12px;
+  padding: 10px;
+  border: 1px solid #dfdfdf;
+  border-radius: 50px;
 }
 
 .shortcut {
-  font-size: 12px;
-  color: var(--color-foreground-secondary);
+  font-size: 18px;
+  color: gray;
   margin-left: auto;
 }
 
@@ -92,3 +96,4 @@
   gap: 12px;
   color: var(--color-foreground);
 }
+
