--- a/frontend/src/components/dashboard/calendar/calendar.css
+++ b/frontend/src/components/dashboard/calendar/calendar.css
@@ -18,8 +18,10 @@
 
 .popoverContent {
   padding: 0;
-  width: auto;
-  max-width: 700px;
+  width: auto !important;
+  min-width: 400px !important;
+  max-width: 700px !important;
+
 }
 
 .calendarContainer {
