--- a/frontend/src/pages/LoginPage/loginPage.css
+++ b/frontend/src/pages/LoginPage/loginPage.css
@@ -218,8 +218,36 @@
   opacity: 0.8;
 }
 
-.login-errorAlert {
+.login-message {
+  padding: 0.75rem 1rem;
+  border-radius: 0.375rem;
   margin-bottom: 1rem;
+  font-size: 0.875rem;
+  font-weight: 500;
+}
+
+.login-messageSuccess {
+  background-color: hsl(142 76% 36% / 0.1);
+  color: hsl(142 76% 36%);
+  border: 1px solid hsl(142 76% 36% / 0.2);
+}
+
+.dark .login-messageSuccess {
+  background-color: hsl(142 76% 36% / 0.15);
+  color: hsl(142 76% 36% / 0.9);
+  border-color: hsl(142 76% 36% / 0.3);
+}
+
+.login-messageError {
+  background-color: hsl(0 84% 60% / 0.1);
+  color: hsl(0 84% 60%);
+  border: 1px solid hsl(0 84% 60% / 0.2);
+}
+
+.dark .login-messageError {
+  background-color: hsl(0 84% 60% / 0.15);
+  color: hsl(0 84% 60% / 0.9);
+  border-color: hsl(0 84% 60% / 0.3);
 }
 
 /* Responsive - Mobile (max 640px) */
