fix: fix width of calendar, user-setting modal, user-organization modal

--- a/frontend/src/components/dashboard/calendar/calendar.css
+++ b/frontend/src/components/dashboard/calendar/calendar.css
@@ -16,7 +16,7 @@
   background-color: hsl(var(--muted));
 }
 
-.popoverContent {
+.popoverContentCalendar {
   padding: 0;
   width: auto !important;
   min-width: 400px !important;
